# llm

./: .gitignore  .rules.md  Prompt.md  README.md  build.py  llm.py  llm.spec  llm_dashboard.py  llm_gui.py  pixi.toml  pyproject.toml  results.md
docs/: index.html
docs/assets/: llm-512x512.icns  llm.icns
docs/assets/llm-512x512.icon/: icon.json
docs/assets/llm.icon/: icon.json
